# music-player

./: Cargo.toml  LICENSE  README.md  flake.nix
humandate/: Cargo.toml
humandate/src/: lib.rs
music-player/: Cargo.toml
music-player/examples/: a.rs
music-player/src/: args.rs  gstreamer.rs  main.rs  mplayer.rs  player_state.rs  playlists.rs  rhythmdb.rs  settings.rs  trace.rs
music-player/src/ui/: events.rs  help.rs  mod.rs  rendering.rs
