[workspace]
resolver = "2"

members = [
  "humandate",
  "music-player"
]

# [package]
metadata.crane.name = "music-player"

# [package]
package.version = "0.1.0"
# edition = "2021"
# license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap_complete_fig = "4.5"
chrono = { version = "0.4", features = ["serde", "clock"] }
config = "0.14"
console-subscriber = {version="0.1"}
crossterm = {version="0.28", features=["event-stream"]}
directories = "5"
fuzzy-matcher = "0.3"
futures = "0.3"
gstreamer = "0.22"
humantime = "2.1"
humandate = {path= "./humandate" }
id3 = { version = "1.13", features = ["tokio"] }
if_chain = "1.0"
itertools = "0.12"
memmap2 = "0.9"
miette = { version = "7", features = ["fancy"] }
mpris-server = "0.8"
opentelemetry = { version = "0.18", features = ["rt-tokio","trace"] }
opentelemetry-jaeger = { version = "0.17", features = ["rt-tokio"] }
pluralizer = "0.4"
rand = { version="0.8", features = ["alloc"] }
ratatui = { version = "0.28", features = ["macros", "crossterm"] }
quick-xml = { version = "0.31", features = ["serialize", "async-tokio", "serde-types"] }
serde = { version = "1.0", features = ["derive", "rc"] }
# thiserror-ext = "0.1" # nightly only.
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = { version = "0.1", features = ["async-await", "log"] }
tracing-error = {version="0.2", features=["traced-error"]}
tracing-forest = { version = "0.1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = { version = "0.18", features = ["async-trait"] }
url = { version = "2.5", features = ["serde"] }
urlencoding = "2.1"


# [profile.release]
# opt-level = "z"
# lto = true          # Enable Link Time Optimization
# codegen-units = 1   # Reduce number of codegen units to increase optimizations.
# panic = "abort"     # Abort on panic
# strip = true        # Automatically strip symbols from the binary.
