[package]
name = "music-player"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
clap_complete_fig = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
crossterm = { workspace = true }
directories = {workspace = true}
fuzzy-matcher = {workspace = true}
futures = { workspace = true }
gstreamer = { workspace = true }
humantime = { workspace = true }
humandate = { workspace = true }
id3 = { workspace = true }
if_chain = { workspace = true }
itertools = { workspace = true }
memmap2 = { workspace = true }
miette = { workspace = true }
mpris-server = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-forest = { workspace = true, optional=true}
tracing-subscriber = { workspace = true }
tracing-error = {workspace = true}
#tracing-unwrap = { workspace = true }
#tracing-attributes = { workspace = true }
console-subscriber = {workspace = true, optional=true}
tracing-opentelemetry = { workspace = true, optional=true }
opentelemetry-jaeger = { workspace = true, optional=true }
opentelemetry = { workspace = true, optional=true }
pluralizer = { workspace = true }
quick-xml = { workspace = true }
rand = { workspace = true }
ratatui = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
toml = { workspace = true }

[features]
# default=["console"]
console = []
forest = ["dep:tracing-forest"]
tokio-console = ["dep:console-subscriber"]
otel = ["dep:opentelemetry", "dep:tracing-opentelemetry", "dep:opentelemetry-jaeger"]
